<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home_grey_200_24dp"/>
    <item
        android:id="@+id/action_explore"
        android:title="@string/welfare"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_explore_grey_200_24dp"/>
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_account_circle_grey_200_24dp"/>
</menu>